2008-03-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/qr.cpp, itpp/base/algebra/qr.h,
	tests/qr_test.cpp, tests/qr_test.ref: Add qr() overloaded function
	that do not compute Q.

	For some tasks (triangularization) the Q matrix is not really needed.
	This patch implements an overloaded version of the qr() function
	that does not compute Q.

	Thanks to Vasek Smidl for submitting the patch.

2008-03-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Fix it_assert_debug()
	conditions in elem_mult_out() methods of the Vec and Mat classes

	The checks for equal sizes of three and more variables can not be
	written like this: "a.size == b.size == c.size". The proper form
	is: "(a.size == b.size) && (a.size == c.size)". This patch fixes
	this bug. It also removes the redundant checks for different
	dimensions of a matrix before invoking the set_size(rows, cols)
	method.

	Thanks to Martin Senst for reporting this bug.

2008-03-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h: Simplify
	BLDPC_Parity::calculate_base_matrix() function

	The previous implementation used to create a temporary dense
	parity check matrix and then extracted Z by Z submatrices from it
	for further processing. With this patch, the temporary Z by Z
	submatrices are sparse and extracted directly from the sparse
	parity check matrix H. Besides, the checks for cyclic-shifted
	identity matrices are simplified. Therefore, an additional method
	circular_eye_b() is no longer needed.

	* itpp/comm/ldpc.cpp: Simplify BLDPC_Parity::expand_base()
	implementation

	The previous implementation used to create a temporary dense
	parity check matrix and then copied its ones to the final sparse
	matrix. This patch changes the code so the sparse parity check
	matrix is constructed directly from the input base matrix.

	* tests/ldpc_test.cpp, tests/ldpc_test.ref: Add simple tests of